Fix: hero image scene moved down 80px, button no longer overlapped

--- a/css/style.css
+++ b/css/style.css
@@ -782,7 +782,7 @@ textarea {
     padding-top: 0;
   }
   .hero__image-scene {
-    margin-top: 80px;
+    margin-top: 160px;
   }
 }
 
@@ -803,7 +803,7 @@ textarea {
   position: relative;
   width: 100%;
   max-width: 1040px;
-  margin: 72px auto 0;
+  margin: 152px auto 0;
   padding: 0;
   overflow: visible;
 }
@@ -899,7 +899,7 @@ textarea {
     padding-bottom: 80px;
   }
   .hero__image-scene {
-    margin-top: 96px;
+    margin-top: 176px;
   }
 }
 
